name:                bindings-nlopt
version:             0.1.0.0
synopsis:            Low-level bindings to the NLOpt minimization library
description:
homepage:            https://github.com/peddie/hs-bindings-nlopt
bug-reports:         https://github.com/peddie/hs-bindings-nlopt/issues
license:             LGPL-3
license-file:        LICENSE
author:              Matthew Peddie
maintainer:          mpeddie@gmail.com
copyright:           (c) 2015 Matthew Peddie
category:            Numerical
build-type:          Simple
cabal-version:       >=1.10

source-repository head
  type:           git
  location:       https://github.com/peddie/hs-bindings-nlopt

library
  exposed-modules: Numeric.Optimization.NLOpt.Bindings
  build-depends:       base >=4.8 && <4.9
                     , vector >= 0.11

  build-tools:         c2hs
  hs-source-dirs:      src
  extra-libraries:     nlopt
  default-language:    Haskell2010
